Rename chapters, add an empty one

--- a/foo-thesis.tex
+++ b/foo-thesis.tex
@@ -99,9 +99,10 @@
 \include{preface}
 
 \mainmatter
-\include{chap1}
-\include{chap2}
-\include{chap3}
+\include{chap-introduction}
+\include{chap-pile}
+\include{chap-examples}
+\include{chap-moreexamples}
 
 \printbibliography[title={Literaturverzeichnis},category=cited,heading=bibintoc]
 
