Add lots of sections, initial bibfile

--- a/chap-pile.tex
+++ b/chap-pile.tex
@@ -1,12 +1,55 @@
 %!TEX root = foo-thesis.tex
 
-\chapter{Put Your Text on the Pile}
+\chapter{Concept}
+
+\section{VPL Sampling: RSMs}
+Regular sampling. Refer to \citep{hedman2016sequential} for something better.
+
+\section{Occlusion: ISMs}
+mainly ISMs \citep{ritschel2008ism} with tesselation \citep{barak2013temporally}
+
+\section{Shading}
+Interleaved shading \citep{Keller:2001:Interleaved} (nothing about non-interleaved!) and clustered deferred shading \citep{olsson2012clustered}
+
+\section{Singularities}
+It's simple, we clamp the singularities.
 
 
-\section{A Section}
 
-\subsection{Some subsection}
+\chapter{Implementation}
 
-\subsection{Some other other subsection}
+\section{Used Libraries and the Framework gloperate}
 
-\subsection{At vero eos et accusam}
+\section{Rendering Pipeline Overview}
+Including G-Buffer generation and sRGB, HDR and all that
+
+\section{RSM Generation and VPL Sampling}
+
+\section{ISM Rendering}
+
+\section{Interleaved Shading with Compute Shaders}
+
+\section{Clustered Deferred Shading}
+
+
+
+
+\chapter{Results}
+
+PERFORMANCE PERFORMANCE PERFORMANCE
+und speicher natürlich
+\section{Used Scenes and Settings}
+
+\section{RSM Generation and VPL Sampling}
+
+\section{ISM Rendering}
+
+\section{Interleaved Shading with Compute Shaders}
+
+\section{Clustered Deferred Shading}
+
+
+
+
+
+\chapter{Conclusion}
