--- a/chap-relatedwork.tex
+++ b/chap-relatedwork.tex
@@ -4,6 +4,26 @@
 
 basically, put the google docs in here.
 
+focus on those that relate to many-light methods.
+
+
+\section{Point-Based GI}
+
+\section{Irradiance Volumes}
+
+\section{Radiance Caching}
+
+\section{Radiance Hints}
+
+\section{Screen-Space GI}
+
+\section{Light Propagation Volumes}
+
+\section{Voxel Cone Tracing}
+
+\section{Other?}
+
+
 \section{Many-Light Methods}
 
 \subsection{Sampling}
@@ -14,25 +34,6 @@ basically, put the google docs in here.
 
 \subsection{Singularities}
 
-
-
-\section{Other Approaches to Real-Time GI}
-
-\subsection{Point-Based}
-
-\subsection{Voxel Cone Tracing}
-
-\subsection{Irradiance Volumes}
-
-\subsection{Screen-Space}
-
-\subsection{Radiance Caching}
-
-\subsection{Radiance Hints}
-
-\subsection{Light Propagation Volumes}
-
-\subsection{Other}
 
 
 
