--- a/foo-thesis.tex
+++ b/foo-thesis.tex
@@ -102,25 +102,24 @@
 \include{chap-introduction}
 \include{chap-relatedwork}
 \include{chap-pile}
-\include{chap-examples}
-\include{chap-moreexamples}
+% \include{chap-examples}
+% \include{chap-moreexamples}
 
-\printbibliography[title={Literaturverzeichnis},category=cited,heading=bibintoc]
+\printbibliography[title={Bibliography},category=cited,heading=bibintoc]
 
 % Further Reading
 % \citesupplementary{Alvarez.etal-1992}
 % \printbibliography[title={Weiterf{"u}hrende Literatur},category=supplementary,resetnumbers=true,heading=bibintoc]
 
 % Debug: uncited
-%\nocite{*}
-%\printbibliography[title={Unzitiert},notcategory=cited,resetnumbers=true,heading=bibintoc]
+\nocite{*}
+\printbibliography[title={Uncited},notcategory=cited,resetnumbers=true,heading=bibintoc]
 
 \appendix
-\include{appn1}
+% \include{appn1}
 
 \backmatter
 
-% List of ToDos
 \listoftodos
 
 \include{statutorydeclaration}
