--- a/foo-thesis.bib
+++ b/foo-thesis.bib
@@ -520,3 +520,44 @@ year = {2015},
  publisher = {Springer-Verlag},
  address = {London, UK, UK},
 }
+
+@article{Yu:2009:Perception,
+ author = {Yu, Insu and Cox, Andrew and Kim, Min H. and Ritschel, Tobias and Grosch, Thorsten and Dachsbacher, Carsten and Kautz, Jan},
+ title = {Perceptual Influence of Approximate Visibility in Indirect Illumination},
+ journal = {ACM Transactions on Applied Perception (TAP)},
+ issue_date = {September 2009},
+ volume = {6},
+ number = {4},
+ month = oct,
+ year = {2009},
+ issn = {1544-3558},
+ pages = {24:1--24:14},
+ articleno = {24},
+ numpages = {14},
+ url = {http://doi.acm.org/10.1145/1609967.1609971},
+ doi = {10.1145/1609967.1609971},
+ acmid = {1609971},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {Global illumination, perception, visibility},
+}
+
+@article{Marroquim:2008:reconstruction2,
+ author = {Marroquim, Ricardo and Kraus, Martin and Cavalcanti, Paulo Roma},
+ title = {Special Section: Point-Based Graphics: Efficient Image Reconstruction for Point-based and Line-based Rendering},
+ journal = {Comput. Graph.},
+ issue_date = {April, 2008},
+ volume = {32},
+ number = {2},
+ month = apr,
+ year = {2008},
+ issn = {0097-8493},
+ pages = {189--203},
+ numpages = {15},
+ url = {http://dx.doi.org/10.1016/j.cag.2008.01.011},
+ doi = {10.1016/j.cag.2008.01.011},
+ acmid = {1363580},
+ publisher = {Pergamon Press, Inc.},
+ address = {Elmsford, NY, USA},
+ keywords = {Line-based rendering, Point-based graphics, Point-based rendering, Pyramid algorithm},
+}
