Complete related work chapter

--- a/foo-thesis.tex
+++ b/foo-thesis.tex
@@ -5,7 +5,8 @@
 
 % Configure Biblatex
 
-\usepackage[defernumbers=true,natbib=true,backend=bibtex,maxbibnames=9,maxcitenames=1,style=authoryear,citestyle=authoryear]{biblatex}
+\usepackage[defernumbers=true,natbib=true,backend=biber,
+    maxbibnames=9,maxcitenames=1,style=authoryear,citestyle=authoryear,uniquelist=false]{biblatex}
 
 % bug workaround, see http://tex.stackexchange.com/questions/311426/bibliography-error-use-of-blxbblverbaddi-doesnt-match-its-definition-ve
 \makeatletter
