--- a/foo-thesis.bib
+++ b/foo-thesis.bib
@@ -70,7 +70,7 @@
  keywords = {Monte Carlo integration, accumulation buffer, hardware, jittered low discrepany sampling, photorealism, quasi-Monte Carlo integration, quasi-random walk, radiance equation, radiosity, realtime rendering algorithms, shading},
 }
 
-@article{Dachsbacher:2014:ManyLights,
+@article{Dachsbacher:2014:ManyLightsSTAR,
     title       = {Scalable Realistic Rendering with Many-Light Methods},
     author      = {Dachsbacher, Carsten and K\v{r}iv\'{a}nek, Jaroslav and Ha\v{s}an, Milo\v{s}
                    and Arbree, Adam and Walter, Bruce and Nov\'{a}k, Jan},
@@ -169,6 +169,24 @@
  publisher = {ACM},
  address = {New York, NY, USA},
  keywords = {hardware-assisted rendering, indirect illumination},
+}
+
+@inproceedings{Dachsbacher:2006:SII:1111411.1111428,
+ author = {Dachsbacher, Carsten and Stamminger, Marc},
+ title = {Splatting Indirect Illumination},
+ booktitle = {Proceedings of the 2006 Symposium on Interactive 3D Graphics and Games},
+ series = {I3D '06},
+ year = {2006},
+ isbn = {1-59593-295-X},
+ location = {Redwood City, California},
+ pages = {93--100},
+ numpages = {8},
+ url = {http://doi.acm.org/10.1145/1111411.1111428},
+ doi = {10.1145/1111411.1111428},
+ acmid = {1111428},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {global illumination, hardware-assisted rendering, real-time rendering, shadow maps},
 }
 
 @inproceedings{Laurent:2016:Stochastic,
@@ -342,13 +360,6 @@
   year={2014}
 }
 
-@inproceedings{chen2016quantizing,
-  title={Quantizing Intersections Using Compact Voxels},
-  author={Chen, Y-Y and Chen, Y-J and Chien, S-Y},
-  booktitle={Computer Graphics Forum},
-  year={2016},
-  organization={Wiley Online Library}
-}
 
 @Inbook{sun2015manylightsSVO,
 author="Sun, Che
@@ -507,19 +518,23 @@ year = {2015},
  address = {Aire-la-Ville, Switzerland, Switzerland},
 }
 
-@inproceedings{Keller:2001:Interleaved,
- author = {Keller, Alexander and Heidrich, Wolfgang},
- title = {Interleaved Sampling},
- booktitle = {Proceedings of the 12th Eurographics Workshop on Rendering Techniques},
- year = {2001},
- isbn = {3-211-83709-4},
- pages = {269--276},
- numpages = {8},
- url = {http://dl.acm.org/citation.cfm?id=647653.732285},
- acmid = {732285},
- publisher = {Springer-Verlag},
- address = {London, UK, UK},
+
+@Inbook{Keller:2001:InterleavedSampling,
+author="Keller, Alexander
+and Heidrich, Wolfgang",
+editor="Gortler, Steven J.
+and Myszkowski, Karol",
+title="Interleaved Sampling",
+bookTitle="Rendering Techniques 2001: Proceedings of the Eurographics Workshop in London, United Kingdom, June 25--27, 2001",
+year="2001",
+publisher="Springer Vienna",
+address="Vienna",
+pages="269--276",
+isbn="978-3-7091-6242-2",
+doi="10.1007/978-3-7091-6242-2_25",
+url="http://dx.doi.org/10.1007/978-3-7091-6242-2_25"
 }
+
 
 @article{Yu:2009:Perception,
  author = {Yu, Insu and Cox, Andrew and Kim, Min H. and Ritschel, Tobias and Grosch, Thorsten and Dachsbacher, Carsten and Kautz, Jan},
@@ -560,4 +575,304 @@ year = {2015},
  publisher = {Pergamon Press, Inc.},
  address = {Elmsford, NY, USA},
  keywords = {Line-based rendering, Point-based graphics, Point-based rendering, Pyramid algorithm},
+}
+
+
+% point-based
+
+@incollection{Bunnell:2005:AO,
+author = {Michael Bunnell},
+title = {Dynamic Ambient Occlusion and Indirect Lighting},
+booktitle = {GPU Gems 2},
+editor = {Matt Pharr},
+publisher = {Addison-Wesley},
+year = {2005},
+pages = {223--233}
+}
+
+@article{christensen2008point,
+  title={Point-based approximate color bleeding},
+  author={Christensen, P},
+  journal={Pixar Technical Notes},
+  volume={2},
+  number={5},
+  pages={6},
+  year={2008},
+  publisher={Citeseer}
+}
+
+@inproceedings{Harada:2014:microbuffer,
+ author = {Harada, Takahiro},
+ title = {Micro-buffer Rasterization Reduction Method for Environment Lighting Using Point-based Rendering},
+ booktitle = {Proceedings of Graphics Interface 2014},
+ series = {GI '14},
+ year = {2014},
+ isbn = {978-1-4822-6003-8},
+ location = {Montreal, Quebec, Canada},
+ pages = {95--102},
+ numpages = {8},
+ url = {http://dl.acm.org/citation.cfm?id=2619648.2619664},
+ acmid = {2619664},
+ publisher = {Canadian Information Processing Society},
+ address = {Toronto, Ont., Canada, Canada},
+}
+
+@article{Ritschel:2009:microrendering,
+ author = {Ritschel, T. and Engelhardt, T. and Grosch, T. and Seidel, H.-P. and Kautz, J. and Dachsbacher, C.},
+ title = {Micro-rendering for Scalable, Parallel Final Gathering},
+ journal = {ACM Trans. Graph.},
+ issue_date = {December 2009},
+ volume = {28},
+ number = {5},
+ month = dec,
+ year = {2009},
+ issn = {0730-0301},
+ pages = {132:1--132:8},
+ articleno = {132},
+ numpages = {8},
+ url = {http://doi.acm.org/10.1145/1618452.1618478},
+ doi = {10.1145/1618452.1618478},
+ acmid = {1618478},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {GPU, final gathering, global illumination, real-time rendering},
+}
+
+
+% voxel cone tracing
+
+@inproceedings{Crassin:2011:VCT,
+ author = {Crassin, Cyril and Neyret, Fabrice and Sainz, Miguel and Green, Simon and Eisemann, Elmar},
+ title = {Interactive Indirect Illumination Using Voxel Cone Tracing: A Preview},
+ booktitle = {Symposium on Interactive 3D Graphics and Games},
+ series = {I3D '11},
+ year = {2011},
+ isbn = {978-1-4503-0565-5},
+ location = {San Francisco, California},
+ pages = {207--207},
+ numpages = {1},
+ url = {http://doi.acm.org/10.1145/1944745.1944787},
+ doi = {10.1145/1944745.1944787},
+ acmid = {1944787},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+}
+
+@inbook{Crassin:2012:OctreeVCT,
+name = {Octree-Based Sparse Voxelization Using The GPU Hardware Rasterizer},
+author = {Crassin, Cyril and Green, Simon},
+url = {http://www.seas.upenn.edu/~pcozzi/OpenGLInsights/OpenGLInsights-SparseVoxelization.pdf, Chapter PDF
+http://blog.icare3d.org/2012/05/gtc-2012-talk-octree-based-sparse.html, GTC 2012 Talk
+http://www.gputechconf.com/gtcnew/on-demand-gtc.php?sessionTopic=&searchByKeyword=&submit=&select=+&sessionEvent=&sessionYear=&sessionFormat=#1465, GTC 2012 Talk Video
+http://www.icare3d.org/research/GTC2012_Voxelization_public.pdf, GTC 2012 Slides PDF
+http://www.icare3d.org/research/GTC2012_Voxelization_public.pptx, GTC 2012 Slides PPTX
+http://openglinsights.com/, OpenGL Insights Website},
+date = {2012-07-01},
+booktitle = {OpenGL Insights},
+publisher = {CRC Press, Patrick Cozzi and Christophe Riccio},
+keywords = {Voxel, voxelization, gpu}
+}
+
+@misc{Panteleev:2015:VXGI,
+author = {Alexey Panteleev},
+title = {NVIDIA VXGI: Dynamic Global Illumination for Games},
+howpublished = {Presentation at the GPU Technology Conference 2015},
+year = {2015}
+}
+
+% tomorrow children and spherical harmonics missing
+
+% ray tracing
+
+
+@inproceedings{Thiedemann:2011:VGI,
+ author = {Thiedemann, Sinje and Henrich, Niklas and Grosch, Thorsten and M\"{u}ller, Stefan},
+ title = {Voxel-based Global Illumination},
+ booktitle = {Symposium on Interactive 3D Graphics and Games},
+ series = {I3D '11},
+ year = {2011},
+ isbn = {978-1-4503-0565-5},
+ location = {San Francisco, California},
+ pages = {103--110},
+ numpages = {8},
+ url = {http://doi.acm.org/10.1145/1944745.1944763},
+ doi = {10.1145/1944745.1944763},
+ acmid = {1944763},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {constant time, global illumination, scene voxelization},
+}
+
+@article{Chang:2015:ray,
+  title={Ray tracing-based interactive diffuse indirect illumination},
+  author={Chang, Byungjoon and Park, Sanghun and Ihm, Insung},
+  journal={Multimedia Tools and Applications},
+  pages={1--20},
+  year={2015},
+  publisher={Springer}
+}
+
+@article {Chen:2016:Compactvoxels,
+author = {Chen, Y.-Y. and Chen, Y.-J. and Chien, S.-Y.},
+title = {Quantizing Intersections Using Compact Voxels},
+journal = {Computer Graphics Forum},
+issn = {1467-8659},
+url = {http://dx.doi.org/10.1111/cgf.12855},
+doi = {10.1111/cgf.12855},
+pages = {n/a--n/a},
+keywords = {interactive global illumination, GPU voxelization, voxel ray tracing, I.3.7 [Computer Graphics]: Three-Dimensional Graphics and Realism—Raytracing},
+year = {2016},
+}
+
+@inproceedings{Tokuyoshi:2012:pathtracingrasterization,
+ author = {Tokuyoshi, Yusuke and Ogaki, Shinji},
+ title = {Real-time Bidirectional Path Tracing via Rasterization},
+ booktitle = {Proceedings of the ACM SIGGRAPH Symposium on Interactive 3D Graphics and Games},
+ series = {I3D '12},
+ year = {2012},
+ isbn = {978-1-4503-1194-6},
+ location = {Costa Mesa, California},
+ pages = {183--190},
+ numpages = {8},
+ url = {http://doi.acm.org/10.1145/2159616.2159647},
+ doi = {10.1145/2159616.2159647},
+ acmid = {2159647},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {global ray-bundles, instant radiosity, interactive global illumination},
+}
+
+% screen space
+
+@article{Mara:2014:DeepGBuffers,
+  title={Fast global illumination approximations on deep g-buffers},
+  author={Mara, Michael and McGuire, Morgan and Nowrouzezahrai, Derek and Luebke, David},
+  year={2014}
+}
+
+@inproceedings{Mara:2016:DeepGBuffers2,
+ author = {Mara, Michael and McGuire, Morgan and Nowrouzezahrai, Derek and Luebke, David},
+ title = {Deep G-buffers for Stable Global Illumination Approximation},
+ booktitle = {Proceedings of High Performance Graphics},
+ series = {HPG '16},
+ year = {2016},
+ isbn = {978-3-03868-008-6},
+ location = {Dublin, Ireland},
+ pages = {87--98},
+ numpages = {12},
+ url = {http://dx.doi.org/10.2312/hpg.20161195},
+ doi = {10.2312/hpg.20161195},
+ acmid = {2977348},
+ publisher = {Eurographics Association},
+ address = {Aire-la-Ville, Switzerland, Switzerland},
+}
+
+
+% radiance caching
+
+@article{Krivanek:2005:RadianceCaching,
+  title={Radiance caching for efficient global illumination computation},
+  author={Krivanek, Jaroslav and Gautron, Pascal and Pattanaik, Sumanta and Bouatouch, Kadi},
+  journal={IEEE Transactions on Visualization and Computer Graphics},
+  volume={11},
+  number={5},
+  pages={550--561},
+  year={2005},
+  publisher={IEEE}
+}
+
+@inproceedings{Scherzer:2012:PreconvolvedRadianceCaching,
+  title={Pre-convolved Radiance Caching},
+  author={Scherzer, Daniel and Nguyen, Chuong H and Ritschel, Tobias and Seidel, Hans-Peter},
+  booktitle={Computer Graphics Forum},
+  volume={31},
+  number={4},
+  pages={1391--1397},
+  year={2012},
+  organization={Wiley Online Library}
+}
+
+@inproceedings{Rehfeld:2014:ClusteredPreconvolvedRadianceCaching,
+  title={Clustered Pre-convolved Radiance Caching.},
+  author={Rehfeld, Hauke and Zirr, Tobias and Dachsbacher, Carsten},
+  booktitle={EGPGV},
+  pages={25--32},
+  year={2014}
+}
+
+@article{Vardis:2014:RadianceCachingUsingChrominanceCompression,
+  title={Real-Time Radiance Caching using Chrominance Compression},
+  author={Vardis, K and Papaioannou, G and Gkaravelis, A},
+  journal={Journal of Computer Graphics Techniques},
+  volume={3},
+  number={4},
+  year={2014},
+  publisher={Citeseer}
+}
+
+
+% Light Propagation Volumes
+
+@article{Kaplanyan:2010:LPV,
+  title={Light propagation volumes in cryengine 3},
+  author={Kaplanyan, Anton},
+  journal={ACM SIGGRAPH Courses},
+  volume={7},
+  pages={2},
+  year={2009}
+}
+
+@inproceedings{Kaplanyan:2010:LPV2,
+ author = {Kaplanyan, Anton and Dachsbacher, Carsten},
+ title = {Cascaded Light Propagation Volumes for Real-time Indirect Illumination},
+ booktitle = {Proceedings of the 2010 ACM SIGGRAPH Symposium on Interactive 3D Graphics and Games},
+ series = {I3D '10},
+ year = {2010},
+ isbn = {978-1-60558-939-8},
+ location = {Washington, D.C.},
+ pages = {99--107},
+ numpages = {9},
+ url = {http://doi.acm.org/10.1145/1730804.1730821},
+ doi = {10.1145/1730804.1730821},
+ acmid = {1730821},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {global illumination, real-time rendering},
+}
+
+@article{Ward:1988:IrradianceCaching,
+ author = {Ward, Gregory J. and Rubinstein, Francis M. and Clear, Robert D.},
+ title = {A Ray Tracing Solution for Diffuse Interreflection},
+ journal = {SIGGRAPH Comput. Graph.},
+ issue_date = {Aug. 1988},
+ volume = {22},
+ number = {4},
+ month = jun,
+ year = {1988},
+ issn = {0097-8930},
+ pages = {85--92},
+ numpages = {8},
+ url = {http://doi.acm.org/10.1145/378456.378490},
+ doi = {10.1145/378456.378490},
+ acmid = {378490},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {Monte Carlo technique, caching, diffuse, illuminance, interreflection, luminance, radiosity, ray tracing, rendering, specular},
+}
+
+
+@inproceedings{Jensen:1996:PhotonMapping,
+ author = {Jensen, Henrik Wann},
+ title = {Global Illumination Using Photon Maps},
+ booktitle = {Proceedings of the Eurographics Workshop on Rendering Techniques '96},
+ year = {1996},
+ isbn = {3-211-82883-4},
+ location = {Porto, Portugal},
+ pages = {21--30},
+ numpages = {10},
+ url = {http://dl.acm.org/citation.cfm?id=275458.275461},
+ acmid = {275461},
+ publisher = {Springer-Verlag},
+ address = {London, UK, UK},
+ keywords = {Monte Carlo, global illumination, photon maps, ray tracing},
 }
