--- a/foo-thesis.bib
+++ b/foo-thesis.bib
@@ -443,18 +443,6 @@ url="http://dx.doi.org/10.1007/978-3-319-27863-6_14"
   organization={Wiley Online Library}
 }
 
-@article{ritschel2009micro,
-  title={Micro-rendering for scalable, parallel final gathering},
-  author={Ritschel, Tobias and Engelhardt, Thomas and Grosch, Thorsten and Seidel, H-P and Kautz, Jan and Dachsbacher, Carsten},
-  journal={ACM Transactions on Graphics (TOG)},
-  volume={28},
-  number={5},
-  pages={132},
-  year={2009},
-  publisher={ACM}
-}
-
-
 
 @inproceedings{sloan2007image,
   title={Image-based proxy accumulation for real-time soft global illumination},
@@ -555,6 +543,14 @@ url="http://dx.doi.org/10.1007/978-3-7091-6242-2_25"
  publisher = {ACM},
  address = {New York, NY, USA},
  keywords = {Global illumination, perception, visibility},
+}
+
+@InProceedings{Marroquim:2007:reconstruction,
+  author =       "Ricardo Marroquim and Martin Kraus and Paulo Roma Cavalcanti",
+  title =        "Efficient Point-Based Rendering Using Image Reconstruction",
+  booktitle =    "Proceedings Symposium on Point-Based Graphics",
+  pages =        "101--108",
+  year =         "2007"
 }
 
 @article{Marroquim:2008:reconstruction2,
