--- a/foo-thesis.tex
+++ b/foo-thesis.tex
@@ -102,6 +102,7 @@
 \mainmatter
 \include{chap-introduction}
 \include{chap-relatedwork}
+\include{chap-concept}
 \include{chap-pile}
 % \include{chap-examples}
 % \include{chap-moreexamples}
