--- a/chap-relatedwork.tex
+++ b/chap-relatedwork.tex
@@ -88,5 +88,6 @@ Splatting techniques have been used to add a light's contribution to the rendere
 
 
 \todo{introduction to many-light methods somewhere}
+\todo{also, some introduction to the various scales of GI. include \citep{jimenez:2016:AO}}
 
 \cleardoublepage
