--- a/foo-thesis.bib
+++ b/foo-thesis.bib
@@ -672,7 +672,7 @@ keywords = {Voxel, voxelization, gpu}
 @misc{Panteleev:2015:VXGI,
 author = {Alexey Panteleev},
 title = {NVIDIA VXGI: Dynamic Global Illumination for Games},
-howpublished = {Presentation at the GPU Technology Conference 2015},
+howpublished = {Presentation at GPU Technology Conference 2015},
 year = {2015}
 }
 
@@ -871,4 +871,11 @@ year = {2016},
  publisher = {Springer-Verlag},
  address = {London, UK, UK},
  keywords = {Monte Carlo, global illumination, photon maps, ray tracing},
+}
+
+@misc{jimenez:2016:AO,
+author = {Jorge Jiménez},
+title = {Practical Real-Time Strategies for Accurate Indirect Occlusion },
+howpublished = {Presentation at SIGGRAPH 2016},
+year = {2015}
 }
