--- a/foo-thesis.tex
+++ b/foo-thesis.tex
@@ -103,6 +103,7 @@
 \include{chap-introduction}
 \include{chap-relatedwork}
 \include{chap-concept}
+\include{chap-implementation}
 \include{chap-pile}
 % \include{chap-examples}
 % \include{chap-moreexamples}
