--- a/foo-thesis.tex
+++ b/foo-thesis.tex
@@ -1,10 +1,9 @@
 %\documentclass[ngerman,oneside]{cgsthesis}
 \documentclass[english]{cgsthesis}
 
-\usepackage[utf8]{inputenc}
+\usepackage{fontspec}
 
 % Configure Biblatex
-
 \usepackage[defernumbers=true,natbib=true,backend=biber,
     maxbibnames=9,maxcitenames=1,style=authoryear,citestyle=authoryear,uniquelist=false]{biblatex}
 
