--- a/chap-concept.tex
+++ b/chap-concept.tex
@@ -80,9 +80,9 @@ We describe the point rendering process in the following section and subsequentl
 \label{sec:interleavedAndClusteredShading}
 \citep{Keller:2001:InterleavedSampling} is often used to vastly improve the performance impact of GI methods.
 
-- general idea: some samples per pixel in a 4x4 or 8x8 block
-- results in structured noise
-- therefore, geometry-aware blur similar to \citet{laine2007incremental}
+- general idea: given some amount of samples that, in a naïve implementation, would be performed per pixel, distribute those samples over a block of pixelssome samples per pixel in a 4x4 or 8x8 block
+- results in structured noise and missing information as all pixels have only part of the samples
+- therefore, geometry-aware blur similar to \citet{laine2007incremental} to distribute the information
 
 - all this works because low-frequency effect
 
