--- a/foo-thesis.bib
+++ b/foo-thesis.bib
@@ -879,3 +879,11 @@ title = {Practical Real-Time Strategies for Accurate Indirect Occlusion },
 howpublished = {Presentation at SIGGRAPH 2016},
 year = {2015}
 }
+
+@online{McGuire2011Data,
+  title = {Computer Graphics Archive},
+  author = {Morgan McGuire},
+  year = {2011},
+  month = {August},
+  url = {http://graphics.cs.williams.edu/data}
+}
