--- a/foo-thesis.tex
+++ b/foo-thesis.tex
@@ -100,10 +100,12 @@
 
 \mainmatter
 \include{chap-introduction}
+\include{chap-introductionGI}
 \include{chap-relatedwork}
 \include{chap-concept}
 \include{chap-implementation}
-\include{chap-pile}
+\include{chap-results}
+\include{chap-conclusion}
 % \include{chap-examples}
 % \include{chap-moreexamples}
 
